# aws-utilities

./: .gitignore  README.md  makefile  pyproject.toml
awsassumerole/: app.py
awsmovemessages/: app.py
